[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Menu/menu-art.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/Theme/MainMenu.tres" type="Theme" id=4]
[ext_resource path="res://src/Menu/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://src/Menu/Settings.tscn" type="PackedScene" id=6]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_left = 10.0
margin_top = 35.0
margin_right = 70.0
margin_bottom = 95.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 150.0
margin_right = 200.0
margin_bottom = 360.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="Options"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
text = "Campaign"

[node name="LoadGame" type="Button" parent="Options"]
visible = false
margin_top = 60.0
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 40 )
text = "Continue"

[node name="Settings" type="Button" parent="Options"]
margin_top = 60.0
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 40 )
text = "Settings"

[node name="Quit" type="Button" parent="Options"]
margin_top = 120.0
margin_right = 150.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 40 )
text = "Quit"

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_bottom = 14.0
text = "v0.2.0 Demo "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Copyright" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -238.0
margin_top = -14.0
text = "Copyright Â© 2022 Jack Anderson "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="Options/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Options/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="Options/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_Quit_pressed"]
